docs/k8s-manifests/hedgedoc-techlab-0.1.0/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techlab
  labels:
    app.kubernetes.io/part-of: hedgedoc
